# ADSDeck

./: .gitignore  README.md  manage.py  pyproject.toml
ads/: admin.py  models.py  serializers.py
ads/migrations/: 0001_initial.py  0002_alter_ads_id_alter_category_id.py  0003_location_alter_ads_options_remove_ads_address_and_more.py  0004_alter_category_options.py  0005_alter_category_options_alter_location_options.py
ads/views/: ads.py  category.py  locations.py  service.py  users.py
dj_simple/: asgi.py  settings.py  urls.py  wsgi.py
fixtures/: ad.csv
