[tool.poetry]
name = "dj-simple"
version = "0.1.0"
description = ""
authors = ["borovoy"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "4.2.9"
pillow = "^10.2.0"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
